增加第二篇博客

--- a/_posts/2014-02-11-关于Spring的一些思考.md
+++ b/_posts/2014-02-11-关于Spring的一些思考.md
@@ -5,4 +5,20 @@ description:
 ---
 # 为什么Spring如此流行  
 说Spring是java世界当中最成功的框架并不为过，对于开发企业级应用Spring已经成为标配，为什么如此的流行，最为关键的原因是Spring是以一切概念的引入都是以**简化**开发为目标的。简化主要是在以下几个方面突出的，对这几个方面的理解程度决定了，你对Spring框架的理解程度。
- 
+
+* 轻量级，最低可侵入性开发模式POJO
+
+什么是POJO，最简单的对象，只有字段和一系列的get和set方法，构造函数只有默认的，这是一种约束也是一种哲学，框架的作用是最大程度上简化软件的开发，而当Spring使用POJO之后,可以很好地降低使用框架的用户程序员学习的曲线，比起EJB这种框架需要了解各个各种对象的生命周期的框架而言，简单方便多了。
+
+* 使用依赖注入
+
+这是Spring的IOC是思想具体体现，如果没有Spring写代码，我们需要自己维护各个类的相互依赖关系，有了Spring之后通过把类的相互依赖关系由Spring来进行管理，这样使得我们编写程序的关注点分离，从而降低了代码的复杂度。
+
+* AOP思想
+
+<img src="/image/spring-aop.png" style="width:600px;display:block;margin-left:auto;margin-right:auto"/>
+如上图所示，有一些例如Log，Security，Tansaction Manager公共的服务模块，在我们写每个业务类的时候都需要，并且可以插入到调用的方法之前，之后，抛出异常时等地方，通过把所有公共组件统一封装起来，然后通过AOP就可以直接使用,而不需要硬编码地放上去。
+何为AOP（面向切面编程），为了最大程度上分离关注点，通过将一些公共的模块抽取出来，然后再需要的地方通过声明的方式将AOP的类插入进去。
+
+* 通过模板，极大地封装代码，使得我们只需要写业务代码。
+
