--- a/_posts/2014-02-11-关于Spring的一些思考.md
+++ b/_posts/2014-02-11-关于Spring的一些思考.md
@@ -1,9 +1,9 @@
 ---
 layout:       post
-title:        "关于Spring的一些思考"
+title:        "为什么Spring如此流行"
 description: 
 ---
-# 为什么Spring如此流行  
+
 说Spring是java世界当中最成功的框架并不为过，对于开发企业级应用Spring已经成为标配，为什么如此的流行，最为关键的原因是Spring是以一切概念的引入都是以**简化**开发为目标的。简化主要是在以下几个方面突出的，对这几个方面的理解程度决定了，你对Spring框架的理解程度。
 
 * 轻量级，最低可侵入性开发模式POJO
@@ -21,4 +21,9 @@ description:
 何为AOP（面向切面编程），为了最大程度上分离关注点，通过将一些公共的模块抽取出来，然后再需要的地方通过声明的方式将AOP的类插入进去。
 
 * 通过模板，极大地封装代码，使得我们只需要写业务代码。
+
+有时候我们要连接数据库的时候会有都会写getConnection，closeConnectin等必须的、共有的方法，而这些过程对于每次数据连接是不变的，为了更好地，变得只是每次的每次提取数据业务逻辑代码，Spring通过模板把公共代码封装起来，最大程度降低了这些公共代码的编写。
+
+
+Spring哲学就是简单，这就是为什么Spring如此流行的原因，它使得我们只需要去关注业务逻辑，只要能够有人能把框架搭建起来，即使水平低的程序员也能进行完型填空。
 
